--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>💚 Anita's  home page.:<wbr></title>
   </head>
   <body>
-    <img src="https://media-exp1.licdn.com/dms/image/C4E03AQGBvVY5cvetKg/profile-displayphoto-shrink_100_100/0?e=1602115200&v=beta&t=VAIEKirwt2wM5-yL_jLh9hUWdaLmN7Ez9Rwbdbwqtzk" alt="Anita prof pic">
+    <img src="" alt="Anita prof pic">
     <h1>Anita</h1>
     <p>
-      <em>Engineering Manager <strong>Extraordinaire</strong></em>
+      <em> <strong>Extraordinaire</strong></em>
       </p>
     <p>
-    I am an engineering manager.
+    .
     </p>
     <hr>
     <h2>Courses</h2>
