--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>💚 Anita's  home page.:<wbr></title>
+    <title>💚 Someone's  home page.:<wbr></title>
   </head>
   <body>
-    <img src="" alt="Anita prof pic">
+    <img src="" alt="Someone's prof pic">
     <h1>Anita</h1>
     <p>
       <em> <strong>Extraordinaire</strong></em>
