--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <img src="" alt="Someone's prof pic">
-    <h1>Anita</h1>
+    <h1>Someone</h1>
     <p>
       <em> <strong>Extraordinaire</strong></em>
       </p>
